breyta pom fyrir reportings a mvn site

--- a/pom.xml
+++ b/pom.xml
@@ -74,16 +74,11 @@
                 </configuration>
             </plugin>
             <plugin>
-                <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>3.5.0</version>
-            </plugin>
-            <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <executions>
                     <execution>
-                        <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>vidmot.slanga_pro/vidmot.slanga_pro.SlangaApplication</mainClass>
@@ -99,12 +94,17 @@
             </plugin>
         </plugins>
     </build>
+
     <reporting>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.11.2</version>
+                <configuration>
+                    <doclint>none</doclint>
+                    <show>private</show>
+                </configuration>
                 <reportSets>
                     <reportSet>
                         <reports>
@@ -112,6 +112,14 @@
                         </reports>
                     </reportSet>
                 </reportSets>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>3.4.1</version>
+                <configuration>
+                    <excludeModules>true</excludeModules>
+                </configuration>
             </plugin>
         </plugins>
     </reporting>
