--- a/pom.xml
+++ b/pom.xml
@@ -118,7 +118,7 @@
                 <artifactId>maven-project-info-reports-plugin</artifactId>
                 <version>3.4.1</version>
                 <configuration>
-                    <excludeModules>true</excludeModules>
+                    <excludeModules>false</excludeModules>
                 </configuration>
             </plugin>
         </plugins>
