lagaði pom skjalið svo allt virkar núna. Site virkar Jar virkar lesfkngo

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
+            </plugin>
+            <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
@@ -81,7 +86,7 @@
                     <execution>
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>vidmot.slanga_pro/vidmot.slanga_pro.SlangaApplication</mainClass>
+                            <mainClass>vidmot.slanga_pro/vidmot.slanga_pro.Main</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
@@ -89,6 +94,30 @@
                             <stripDebug>true</stripDebug>
                             <noHeaderFiles>true</noHeaderFiles>
                         </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.7.1</version>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>vidmot.slanga_pro.Main</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
@@ -118,7 +147,7 @@
                 <artifactId>maven-project-info-reports-plugin</artifactId>
                 <version>3.4.1</version>
                 <configuration>
-                    <excludeModules>false</excludeModules>
+<!--                    <excludeModules>false</excludeModules>-->
                 </configuration>
             </plugin>
         </plugins>
